--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,9 @@ font-size: 13px;
 .fs-32{
   font-size: 32px;
 }
+.fs-34{
+  font-size: 34px;
+}
 .fs-35{
   font-size: 35px;
 }
@@ -273,6 +276,9 @@ font-size: 13px;
 }
 .font-family-alt {
     font-family: Catamaran, sans-serif!important;
+}
+.font-family-roboto{
+  font-family: Roboto,sans-serif!important;
 }
 .ff-mont{
   font-family: Montserrat, sans-serif;
@@ -493,6 +499,12 @@ hr.style3 {
     border-radius: 20%;
     width: 238px;
 }
+.speakers-box a{
+  text-decoration: none;
+}
+.speakers-txtbox a:hover{
+  font-size: 16px;
+}
 .speakers-imgbox{
   box-shadow: 0px 0px 11px 1px #918f8f;
     margin-left: 15%;
@@ -508,6 +520,9 @@ hr.style3 {
 .speakers-imgbox img{
 width: 100%;
     height: 100%;
+}
+.speakers-imgbox:hover {
+    border: 4px solid #e62b1ea8;
 }
 .speakers-txtbox{
 padding-top: 10px;
@@ -545,12 +560,12 @@ font-size: 20px!important;
 }
 
 .countdown-timer .value {
-   font-family: Poppins, sans-serif;
+  font-family: Poppins, sans-serif;
     font-size: 50px;
     font-weight: 500;
     color: white;
+    padding: 19px;
     align-self: center;
-    margin-left: 27px;
 }
 .countdown-timer{
   display: flex;
@@ -560,10 +575,10 @@ font-size: 20px!important;
         font-family: Poppins, sans-serif;
     font-size: 16px;
     font-weight: 400;
-    color: rgba(255, 255, 255, 0.75);
+    color: white;
     padding: 5px;
     align-self: center;
-    margin-left: 25%;
+    margin-left: 0%;
 }
 #sponsors{
   padding: 10px 10px 30px 10px;
@@ -691,7 +706,7 @@ color: white;
   background: black;
 }
 .footerlogo{
-  width: 300px;
+  width: 100%;
 }
 .footerlogo img{
 width: 100%;
@@ -754,12 +769,150 @@ footer a:hover{
 .text-justify{
   text-align: justify;
 }
+.colon{
+  color: white;
+  font-size: 32px;
+  padding-top: 0.5rem;
+}
+
+.teamprofile{
+  margin: 20px;
+}
+.teamprofileimg{
+ box-shadow: 0px 0px 11px 1px #918f8f;
+    margin: auto;
+    overflow: hidden;
+    border-radius: 20%;
+    height: 120px;
+    width: 120px;
+}
+.teamprofileimg:hover{
+border: 4px solid #e62b1ea8;
+}
+.teamprofileimg img{
+  width: 100%;
+  height: auto;
+}
+.teamprofiletxt{
+  padding-top: 10px;
+    text-align: center;
+}
+.teamprofiletxt h1 {
+    color: red;
+    font-size: 18px!important;
+}
+.teamprofiletxt p{
+  font-size: 14px!important;
+    font-weight: 400;
+}
+#ourteam{
+  padding: 30px;
+  height: auto;
+}
+.speakerprofilepage{
+  background-color: black;
+}
+.briefspeakerprofile{
+    padding: 40px;
+}
+.briefspeakerprofileimg{
+      width: 100%;
+}
+.briefspeakerprofileimg img{
+  box-shadow: 1px 3px 7px 1px #464646;
+    border-radius: 58px;
+    width: 100%;
+    border: 5px #ff5722b3 solid;
+}
+.briefspeakerprofiletext{
+  text-align: justify;
+}
+.sponsorsousimg{
+  width: 100%;
+  height: auto;
+}
+.sponsorsousimg img{
+  width: 100%;
+  height: auto;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
 
 
 @media only screen and (max-width: 768px) {
+  .colon{
+  font-size: 32px;
+  padding-top: 0rem;
+}
+  .dateandplace h1{
+  font-size: 26px;
+}
+.dateandplace h2{
+  font-size: 13px;
+}
   #main{
   position: relative;
   background-image: url("../assets/bgmobile.png");
@@ -829,7 +982,7 @@ footer a:hover{
   font-size: 24px!important;
 }
 .pastevents  p{
-  text-align: left!important;
+  text-align: justify!important;
   font-size: 12px!important;
 }
 iframe{
@@ -968,29 +1121,36 @@ color: white;
 }
 .contactnumber {
     padding-left: 11%;
-  /*  background-image: url(../assets/telephone.png);
+    background-image: url(../assets/telephone.png);
+    background-repeat: no-repeat;
+    background-size: 20px;
+    background-position-y: center;
+  }
+.contactmail {
+   padding-left: 11%;
+ 
+    /*background-image: ur(../assets/envelope.png);
     background-repeat: no-repeat;
     background-size: 16px;*/
 }
-.contactmail {
-   padding-left: 11%;
-    /*background-image: url(../assets/envelope.png);
-    background-repeat: no-repeat;
-    background-size: 16px;*/
+.socialmediaico{
+  width: 100%;
+    text-align: center;
 }
 .socialmedia img {
     width: 32px;
     margin-left: 7px;
 }
 .footerlogo {
-    width: 260px;
+    margin-top: 40px;
+    width: 100%;
 }
 #contactus h1{
-  text-align: left;
+  text-align: center;
   font-size: 20px;
 }
 #contactus p{
-  text-align: left;
+  text-align: center;
   font-size : 16px;
 }
 .countdown-timer .value {
@@ -999,6 +1159,9 @@ color: white;
     font-weight: 500;
     color: white;
     align-self: center;
+}
+.contactcontent, .socialmedia {
+   margin-right: 0%; 
 }
 .footer p{
   font-size: 10px;
@@ -1018,7 +1181,7 @@ color: white;
   .buyticketsbottom{
    width: 100%;
     margin: 40px 0px 40px 0;
-    text-align: left;
+    text-align: center;
   }
 .sponsorsouslinkbtn {
     text-align: center;
@@ -1030,4 +1193,14 @@ color: white;
      margin-top: none;
     width: 100%;
 }
+#ourteam {
+    padding: 15px;
+    height: auto;
+}
+.briefspeakerprofile {
+    height: auto;
+    padding: 0px;
+    margin: 27% 0px 12% 0px;
+}
+
 }
